# simple_vpn

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
config/: __init__.py  settings.py  urls.py
simple_site/: __init__.py  settings.py  wsgi.py
site/: __init__.py  settings.py  wsgi.py
tests/: conftest.py  settings.py
tests/vpn/: __init__.py  conftest.py  factories.py  test_tables.py  test_views.py
vpn/: __init__.py  admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  urls.py  utils.py  views.py
vpn/management/: __init__.py
vpn/management/commands/: __init__.py  init_site_operations.py
vpn/static/vpn/: slug  slug.cmd  slug.ps1
vpn/static/vpn/js/: slugify.js  turnVPN.js
vpn/templates/vpn/: account.html  base.html  create_personal_site.html  index.html  login.html  password_change.html  personal_site.html  top_bar.html  user_creation_form.html
vpn/templates/vpn/auth/: login.html  password_change.html  user_creation_form.html
vpn/templates/vpn/page/: create_page.html  delete_page.html  page.html  update_page.html
vpn/templates/vpn/personal_site/: create_personal_site.html  delete_personal_site.html  update_personal_site.html
vpn_site/: __init__.py  settings.py  urls.py  wsgi.py
